<?xml version="1.0" encoding="utf-8"?>
<!--
Marija Jovicic
Project 3b
5/12/2020
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        tools:context=".MainActivity">

        <Switch
            android:id="@+id/competition"
            android:layout_width="190dp"
            android:layout_height="31dp"
            android:layout_marginTop="15dp"
            android:text="@string/competition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPeople"
            android:textColor="@color/textColor"
            android:textSize = "15sp"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:textColor="@color/textColor"
            />

        <TextView
            android:id="@+id/enterInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:text="@string/enterInfo"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/welcome"
            app:layout_constraintVertical_bias="0.032"
            android:textColor="@color/textColor"
           />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="92dp"
            android:layout_height="21dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="24dp"
            android:text="@string/name"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterInfo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="95dp"
            android:layout_height="19dp"
            android:layout_marginTop="24dp"
            android:text="@string/DOB"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="460dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="120dp"
            android:onClick="callConfirmationPage"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            app:layout_constraintVertical_bias="0.0"
            android:textColor="@color/textColor"
            android:textSize = "15sp"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/playedBefore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:textColor="@color/textColor"
            android:textSize = "15sp"

            />

        <Switch
            android:id="@+id/newPeople"
            android:layout_width="193dp"
            android:layout_height="36dp"
            android:layout_marginTop="15dp"
            android:text="@string/newPeople"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recreation"
            android:textColor="@color/textColor"
            android:textSize = "15sp"/>

        <Switch
            android:id="@+id/recreation"
            android:layout_width="193dp"
            android:layout_height="37dp"
            android:layout_marginTop="15dp"
            android:text="@string/recreation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:textColor="@color/textColor"
            android:textSize = "15sp"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="135dp"
            android:layout_height="27dp"
            android:layout_marginTop="36dp"
            android:text="@string/playFor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            android:textColor="@color/textColor"
            android:textSize = "15sp"
            />

        <EditText
            android:id="@+id/date"
            android:layout_width="205dp"
            android:layout_height="42dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="56dp"
            android:ems="10"
            android:hint="@string/dateHint"
            android:inputType="date"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/enterInfo" />

        <EditText
            android:id="@+id/name"
            android:layout_width="206dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="86dp"
            android:layout_marginRight="86dp"
            android:ems="10"
            android:hint="@string/nameHint"
            android:inputType="textPersonName"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/enterInfo"
            app:layout_constraintVertical_bias="0.035" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
