<?xml version="1.0" encoding="utf-8"?>
<!--
Marija Jovicic
Project 3b
5/12/2020
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/background"
  >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    tools:context=".ConfirmationPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="370dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="11dp"
        android:text="@string/thankYou"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="338dp"
        android:layout_marginRight="338dp"
        android:layout_marginBottom="20dp"
        android:text="@string/summary"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/textColor"
        android:textSize = "15sp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="364dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="283dp"
        android:layout_marginRight="283dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Name"
        app:layout_constraintBottom_toTopOf="@+id/dob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:textColor="@color/textColor"
        android:textSize = "15sp"/>

    <TextView
        android:id="@+id/dob"
        android:layout_width="267dp"
        android:layout_height="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="281dp"
        android:layout_marginRight="281dp"
        android:layout_marginBottom="5dp"
        android:text="@string/dob"
        app:layout_constraintBottom_toTopOf="@+id/playedTennis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:textColor="@color/textColor"
        android:textSize = "15sp"/>

    <TextView
        android:id="@+id/playedTennis"
        android:layout_width="336dp"
        android:layout_height="21dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="230dp"
        android:layout_marginRight="230dp"
        android:layout_marginBottom="5dp"
        android:text="@string/played_before"
        app:layout_constraintBottom_toTopOf="@+id/playsFor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob"
        android:textColor="@color/textColor"
        android:textSize = "15sp"/>

    <TextView
        android:id="@+id/playsFor"
        android:layout_width="374dp"
        android:layout_height="117dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="223dp"
        android:layout_marginRight="223dp"
        android:layout_marginBottom="494dp"
        android:text="@string/plays_for"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playedTennis"
        android:textColor="@color/textColor"
        android:textSize = "15sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>